--- a/src/main/webapp/resources/css/customized.css
+++ b/src/main/webapp/resources/css/customized.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
-/* * {
+ * {
   border-radius: 0 !important;
-} */
+} 
 #contextMenu{
     position: absolute;
     display:none;
@@ -18,4 +18,65 @@
 }
 .affix {
     top: 20px;
- }
+}
+
+.login-page {
+  	width: 400px;
+	padding: 8% 0 0;
+	margin: auto;
+	
+}
+.form {
+ 	position: relative;
+  	z-index: 1;
+  	background: #FFFFFF;
+  	max-width: 360px;
+  	margin: 0 auto 100px;
+  	padding: 45px;
+  	text-align: center;
+  	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.login-container {
+	background-color: #1E6486; 
+	padding: 25px;
+	color: #fff;
+}
+.leftMenubar.col-sm-2 {
+    padding: 0px;
+}
+
+/* Changes in navigation bar */
+.navbar-inverse {
+    background-color: #235C77;
+    border-color: #235C77;
+}
+.navbar-inverse .navbar-brand {
+    color: #fff;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #fff;
+}
+
+/* table */
+.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th{
+    border: none;
+}
+
+/* panel */
+.panel-primary > .panel-heading {
+    color: #fff;
+    background-color: #235c77;
+    border-color: #235c77;
+}
+
+/* btn color */
+.btn-primary {
+    color: #fff;
+    background-color: #235c77;
+    border-color: #235c77;
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
+	color: #fff;
+	background-color: #235c77;
+}
